<resources>
    <string name="app_name">Challenge</string>
    <string name="activity_challenge_qty_proofs">Challengers</string>
    <string name="activity_challenge_qty_visualizaciones">Visualizaciones</string>

    <string name="hot_proofs_qty_seen">Vistas</string>
    <string name="separator">-</string>

    <string name="hot_proofs_since">Hace</string>
    <string name="hot_proofs_weeks">semanas</string>
    <string name="hot_proofs_days">días</string>
    <string name="hot_proofs_hours">horas</string>
    <string name="hot_proofs_minutes">minutos</string>

    <string name="profile_my_videos">Mis videos</string>
    <string name="profile_my_favs">Favoritos</string>
    <string name="profile_my_settings">Configuración de cuenta</string>
    <string name="profile_my_notifications">Notifiaciones</string>
    <string name="profile_sign_out">Salir</string>
    <string name="profile_about_us">Sobre nosotros</string>

    <string name="toolbar_menu_create">Crear challenge</string>

    <string name="activity_create_challenge_title">Crear nuevo challenge</string>
    <string name="activity_create_challenge_title_text">Título</string>
    <string name="activity_create_challenge_description_text">Descripción</string>

    <string name="activity_create_challenge_rules_text">Cargar reglas</string>

    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>
    <string name="accounts">Cuentas</string>
    <string name="refresh">Actualizar</string>
    <string name="error_player">Error in youtube player</string>

    <string name="label_yesterday">Ayer</string>

</resources>
