<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/hotProofsItemCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:cardElevation="@dimen/cardview_default_elevation">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:layout_marginBottom="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginBottom="5dp"
                android:background="@color/primary"/>

            <TextView
                android:id="@+id/HotProofItemTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:text="Ice Bucket challenge"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginBottom="5dp"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="horizontal"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/activity_horizontal_margin"
                          android:paddingRight="@dimen/activity_horizontal_margin"
                          >
                <TextView
                    android:id="@+id/hotChallengeProofUserNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:text="Samuel"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:paddingRight="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:text="@string/separator"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:paddingRight="5dp"/>

                <TextView
                    android:id="@+id/hotChallengeProofQtyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:text="10k"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:paddingRight="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:text="@string/hot_proofs_qty_seen"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:paddingRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:text="@string/separator"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:paddingRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:text="@string/hot_proofs_since"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:paddingRight="5dp"/>
                <TextView
                    android:id="@+id/hotChallengeProofAgeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:text="2 semanas"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:paddingRight="5dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>